# plotters-iced

./: Cargo.toml
examples/: cpu-monitor.rs  large-data.rs  mouse_events.rs
examples/split-chart/: Cargo.toml
examples/split-chart/src/: main.rs
src/: widget.rs
src/backend/: mod.rs
