[package]
name = "plotters-iced"
version = "0.11.0"
description = "Iced backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2021"
resolver = "2"
homepage = "https://github.com/Joylei/plotters-iced"
repository = "https://github.com/Joylei/plotters-iced.git"
documentation = "https://docs.rs/crate/plotters-iced/"
keywords = ["plotters", "chart", "plot", "iced", "backend"]
categories = ["visualization"]
authors = ["Joylei <leingliu@gmail.com>"]

[workspace]
members = [".", "examples/split-chart"]

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced" }
iced_widget = { git = "https://github.com/iced-rs/iced" }
iced_graphics = { git = "https://github.com/iced-rs/iced" }


[dependencies]
iced_widget = { version = "0.14.0-dev", features = ["canvas"] }
plotters = { version = "0.3.7", default-features = false }
plotters-backend = "0.3.7"
iced_graphics = "0.14.0-dev"
once_cell = "1"

[dev-dependencies]
plotters = { version = "0.3", default-features = false, features = [
  "chrono",
  "area_series",
  "line_series",
  "point_series",
] }
iced = { version = "0.14.0-dev", features = ["canvas", "tokio"] }
chrono = { version = "0.4", default-features = false }
rand = "0.8"
tokio = { version = "1", features = ["rt"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sysinfo = { version = "0.30", default-features = false }
