[package]
name = "split-chart"
version = "0.1.0"
authors = ["Joylei <leingliu@gmail.com>"]
edition = "2021"
publish = false

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced" }
iced_widget = { git = "https://github.com/iced-rs/iced" }
iced_graphics = { git = "https://github.com/iced-rs/iced" }

[dependencies]
iced = { version = "0.14.0-dev", features = ["canvas"] }
plotters-iced = { path = "../../" }
plotters = { version = "0.3.7", default-features = false, features = [
  "chrono",
  "area_series",
  "line_series",
  "point_series",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced.version = "0.14.0-dev"
iced.features = ["canvas", "debug", "webgl"]

console_error_panic_hook = "0.1"
console_log = "1.0"
